BFD-4762: Add _source param to EOB _id searches (#3167)