@@ -4,8 +4,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import gov.cms.bfd.server.ng.eob.EobHandler;
+import gov.cms.bfd.server.ng.input.ClaimIdSearchCriteria;
 import gov.cms.bfd.server.ng.input.DateTimeRange;
 import gov.cms.bfd.server.ng.testUtil.ThreadSafeAppender;
+import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.junit.jupiter.api.Test;
@@ -32,9 +34,11 @@ class EobSamhsaFilterLoggingIT extends IntegrationTestBase {
     var events = ThreadSafeAppender.startRecord();
 
     eobHandler.searchById(
-        List.of(CLAIM_ID_WITH_SAMHSA_DIAGNOSIS),
-        new DateTimeRange(),
-        new DateTimeRange(),
+        new ClaimIdSearchCriteria(
+            List.of(CLAIM_ID_WITH_SAMHSA_DIAGNOSIS),
+            new DateTimeRange(),
+            new DateTimeRange(),
+            Collections.emptyList()),
         excludeOptions);
 
     var samhsaLogs =
@@ -59,7 +63,12 @@ class EobSamhsaFilterLoggingIT extends IntegrationTestBase {
     var events = ThreadSafeAppender.startRecord();
 
     eobHandler.searchById(
-        List.of(CLAIM_ID_WITH_NO_SAMHSA), new DateTimeRange(), new DateTimeRange(), excludeOptions);
+        new ClaimIdSearchCriteria(
+            List.of(CLAIM_ID_WITH_NO_SAMHSA),
+            new DateTimeRange(),
+            new DateTimeRange(),
+            Collections.emptyList()),
+        excludeOptions);
 
     var samhsaLogs =
         events.stream()
